tests/kulezi_tests/bad/not_a_class02.lat
int main() {
    (f)null;
    return 0;
}